<resources>
    <string name="app_name" translatable="false">NotiFy</string>
    <string name="notes_list">Notes</string>
    <string name="add_note">New note</string>
    <string name="update_note">Update note</string>
    <string name="successfull_added_new_note">Note has been successfully added!</string>
    <string name="note_updated_successfull">Note has been successfully updated!</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="note_deleted_successfully">Note has been successfully deleted.</string>
    <string name="delete">Delete note</string>
    <string name="question_delete_note">Are you sure you want to delete this note?</string>
    <string name="note">Note</string>
    <string name="empty_note">Note can\'t be empty!</string>
    <string name="Login">Login</string>
    <string name="error_resources_wrong_password">Wrong password</string>
    <string name="uppdate">Update</string>
    <string name="api_error_something_went_wrong">Ups! Something went wrong. Please try again.</string>
    <string name="api_error_report_not_found">This report was not found, probably is was deleted. Reload data or try again.</string>
    <string name="api_error_authorisation_failed">Authorization failed. Please login again.</string>
    <string name="api_error_wrong_login">Wrong username or password.</string>
    <string name="username">User name</string>
    <string name="password" translatable="false">Password</string>
    <string name="signin">Sign In</string>
    <string name="login" translatable="false">Login</string>
    <string name="error_something_went_wrong">Ups! Something went wrong. Please try again.</string>
    <string name="fill_username_and_password">Please fill username and password!</string>
    <string name="reports_list">Reports</string>
    <string name="ony_edit_your_reports">Ups! You can only update or delete your notes.</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="hello">Hello</string>
    <string name="logout">Logout</string>
    <string name="logout_question">Do you want log out?</string>
    <string name="refresh">Refresh</string>
    <string name="add_report">New report</string>
    <string name="update_report">Update report</string>
    <string name="fill_title_and_description">Please fill title and description!</string>
    <string name="successfull_added_new_report">Report has been successfully added!</string>
    <string name="delete_report">Delete report</string>
    <string name="question_delete_report">Are you sure you want delete this report?</string>
    <string name="successfull_deleted_report">Report has been successfully deleted!</string>
    <string name="successfull_updated_report">Report has been successfully updated!</string>
    <string name="session_expired">Session expired</string>
    <string name="session_expired_message">Session has been expired. Please sign in.</string>
</resources>